5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1594_2043.log
== TEST (2019-04-03 01:07:10) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:07:40) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media,2))

-- EXECUTION TIME:
0.265582
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:07:49) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:09:36) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media,2))

-- EXECUTION TIME:
0.127909
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:10:47) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:11:13) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:11:26) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:11:37) 
-- CODE:
nhttp://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1594#ota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,2))

-- ERROR:
File "XXXX", line 1
    nhttp://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1594#ota1 = float(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:12:03) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:12:14) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:12:25) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:12:48) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,1))

-- OUTPUT:
8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:13:05) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,1))

-- OUTPUT:
8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:13:21) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,1))

-- EXECUTION TIME:
0.168371
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.1
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:13:25) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)
total = media/4
print(round(total,1))

-- OUTPUT:
8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:21:55) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)//4
print(round(media,1))

-- EXECUTION TIME:
0.194059
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:22:03) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)//4
print(round(media,2))

-- EXECUTION TIME:
0.213396
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:22:16) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)%4
print(round(media,1))

-- EXECUTION TIME:
0.145312
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
0.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:22:26) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)%4
print(round(media,2))

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:22:30) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)%4
print(round(media,2))

-- EXECUTION TIME:
0.137305
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
0.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
1.59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:22:48) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)%4
print(round(media,1))

-- EXECUTION TIME:
0.180178
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
0.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:22:56) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)//4
print(round(media,1))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:23:00) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)//4
print(round(media,1))

-- EXECUTION TIME:
0.147301
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:23:06) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media,1))

-- EXECUTION TIME:
0.18124
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.1
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:23:16) 
-- CODE:
nota1 = float(input('insira a nota: '))
nota2 = float(input('insira a  nota: '))
nota3 = float(input('insira a nota: '))
nota4 = float(input('insira a nota: '))
media = (nota1 + nota2 + nota3 + nota4)/4
print(round(media,2))

-- EXECUTION TIME:
0.129485
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:24:34) 
-- CODE:
1 = float(input('Nota: '))
2 = float(input('Nota: '))
3 = float(input('Nota: '))
4 = float(input('Nota: '))
media = (1 + 2 + 3 + 4)/4
print(round(media,2))

-- EXECUTION TIME:
0.149379
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 1
    1 = float(input())
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:24:45) 
-- CODE:
1 = float(input('Nota: '))
2 = float(input('Nota: '))
3 = float(input('Nota: '))
4 = float(input('Nota: '))
media = (1 + 2 + 3 + 4)/4
print(round(media,2))

-- ERROR:
File "XXXX", line 1
    1 = float(input())
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:25:18) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = (N1 + N2 + N3 + N4)/4
print(round(media,2))

-- EXECUTION TIME:
0.168719
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 22:58:49) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = (N1 + N2 + N3 + N4)/4
print(round(media,2))

-- EXECUTION TIME:
0.203625
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 23:00:08) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = (N1 + N2 + N3 + N4)%4
print(round(media,2))

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 23:00:15) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = (N1 + N2 + N3 + N4)%4
print(round(media,2))

-- EXECUTION TIME:
0.185113
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
0.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
1.59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:14:40) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = ((N1 + N2 + N3 + N4)/4)
print(round(media,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:14:42) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = ((N1 + N2 + N3 + N4)/4)
print(round(media,2))

-- EXECUTION TIME:
0.136451
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.12
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:14:45) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = ((N1 + N2 + N3 + N4)/4)
print(round(media,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:18:02) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = ((N1 + 2*N2 + 3*N3 + 4*N4)/4)
print(round(media,2))

-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:19:00) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = ((N1 + 2*N2 + 3*N3 + 4*N4)/9)
print(round(media,2))

-- OUTPUT:
9.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:19:21) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = ((N1 + 2*N2 + 3*N3 + 4*N4)/10)
print(round(media,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:19:34) 
-- CODE:
N1 = float(input('Nota: '))
N2 = float(input('Nota: '))
N3 = float(input('Nota: '))
N4 = float(input('Nota: '))
media = ((N1 + 2*N2 + 3*N3 + 4*N4)/10)
print(round(media,2))

-- EXECUTION TIME:
0.170318
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
